--- a/app/src/main/res/layout/fragment_weather_list.xml
+++ b/app/src/main/res/layout/fragment_weather_list.xml
@@ -78,6 +78,17 @@
             tools:text="-23" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/mainFragmentFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_15_dp"
+        android:src="@drawable/ic_russia"
+        app:tint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="56dp" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
