Lesson 3. Done! Добавили иконки Обработали нажатия по списку Открытие деталей погоды по клику на элемент списка

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,6 @@
         <dimen name="recycler_item_text_size">25sp</dimen>
         <dimen name="recycler_item_line_height">1dp</dimen>
         <dimen name="recycler_item_line_margin_end">20dp</dimen>
+        <dimen name="city_list_name_size">25sp</dimen>
 
 </resources>
